<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <ScrollView
        android:layout_width="320dp"
        android:layout_height="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/inscrire_ton_profil_dans_appdev_company"/>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:cardCornerRadius="32dp"
                android:layout_marginBottom="15dp">
                <EditText
                    android:id="@+id/surname"
                    android:layout_width="300dp"
                    android:layout_height="39dp"
                    android:lines="1"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:background="#00ffffff"
                    android:paddingLeft="8dp"
                    android:drawableLeft="@drawable/ic_perm_identity"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_perm_identity"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:cardCornerRadius="32dp"
                android:layout_marginBottom="15dp">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="300dp"
                    android:layout_height="39dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:lines="1"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:background="#00ffffff"
                    android:drawableLeft="@drawable/ic_perm_identity"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_perm_identity" />
            </android.support.v7.widget.CardView>





            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="40dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="Sexe:"
                    android:textSize="18dp"
                    android:paddingTop="3dp"
                    android:textAppearance="?android:textAppearanceLarge"
                    />
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/group"
                    >
                    <RadioButton
                        android:id="@+id/homme"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:text="Homme"/>

                    <RadioButton
                        android:id="@+id/femme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Femme" />
                </RadioGroup>
            </RelativeLayout>



        </LinearLayout>
    </ScrollView>




</android.support.constraint.ConstraintLayout>